--- a/css/styles.css
+++ b/css/styles.css
@@ -22,12 +22,12 @@ main{
   background-color: var(--white);
   width: 310px;
   height: 500px;
-  border-radius: 40px;
+  border-radius: 20px;
   box-shadow: 10px 10px;
   max-width: 1440px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  align-items: center;
 }
 
 .img_container{
@@ -35,6 +35,7 @@ main{
   width: 90%;
   border-radius: 10px;
   overflow: hidden;
+  margin: 18px auto;
 }
 
 .img_card{
@@ -42,7 +43,21 @@ main{
   width: 100%;
 }
 
-.card_job{
-  
+.card_text{
+  width: 279px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;    
 }
+
+.card_text_job{
+  border-radius: 5px;
+  background-color: var(--yellow);
+  font-size: 13px;
+  font-weight: bold;
+  width: 70px;
+  padding: 7.5px;
+}
+
+
 
